# docs/swagger.json
@@ -18,7 +18,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/auth/refresh": {
+        "/api/v1/auth/refresh": {
             "post": {
                 "description": "トークンの更新",
                 "consumes": [
@@ -58,7 +58,7 @@
                 }
             }
         },
-        "/auth/signin": {
+        "/api/v1/auth/signin": {
             "post": {
                 "description": "ユーザー認証",
                 "consumes": [
@@ -98,7 +98,7 @@
                 }
             }
         },
-        "/auth/signup": {
+        "/api/v1/auth/signup": {
             "post": {
                 "description": "ユーザー登録",
                 "consumes": [
